# Master

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  game.py  main.py  pyproject.toml  snake.py  task.txt  test.py
.github/workflows/: ci.yml
backend/: dependencies.py  dockerfile
backend/ai/: ai_analyzer.py  assistant.py  session_assistant.py
backend/analyzer/: ai_project_analyzer.py  code_analyzer.py  project_analyzer.py
backend/gitlab/: gitlab_service.py  test.py
backend/learning/: learning_tracker.py
backend/models/: code_feedback.py  code_quailty_metric.py  editor_state.py  promt.py  student.py  suggestion.py  survey.py  task.py
backend/mongodb/: MongoDB.py
backend/routers/: ai_router.py  api_routers.py  auth_router.py  gitlab_router.py  student_router.py  suggestion_router.py  survey_router.py
backend/services/: auth_service.py  student_service.py  suggestion_service.py  survey_service.py
frontend/coding-tool/: package-lock.json  package.json
frontend/coding-tool/app/: page.tsx
my-coding-coach/: dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
my-coding-coach/src/app/: layout.tsx  page.tsx
my-coding-coach/src/components/: AssistantChat.tsx  CodeEditor.tsx  FeedbackPanel.tsx  FileExplorer.tsx  MultiFileEditor.tsx  MultiFilePyodideRunner.tsx  Navbar.tsx  (+2 more)
steamlit-frontend/: myapp.py
steamlit-frontend/components/: code_editor.py  code_editor_style.HTML  pyodide.py
steamlit-frontend/services/: code_service.py  config.py
steamlit-frontend/utils/: ui_helpers.py
streamlit-frontend/: myapp.py
streamlit-frontend/components/: code_editor.py  gitlab.py
streamlit-frontend/services/: ai_service.py  code_service.py  gitlab_service.py
streamlit-frontend/utils/: config.py
tests/: conftest.py  test_all_endpoints.py  test_assistant_endpoints.py
utils/: code_executor.py
(+42 files in other folders)
