[project]
name = "master"
version = "0.1.0"
description = ""
authors = [
    {name = "SindreEieLedsaak",email = "sindre.eie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
