[project]
name = "master"
version = "0.1.0"
description = ""
authors = [
    {name = "SindreEieLedsaak",email = "sindre.eie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "python-gitlab (>=5.6.0,<6.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "authlib (>=1.6.1,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "npm (>=0.1.1,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
mongomock = "^4.3.0"

